# gitops

./: .inflate.lock.yaml  README.md  pyproject.toml
bases.external/codestrands/: kustomization.yaml
bases.external/keycloak/: kustomization.yaml  values.keycloak.yaml
bases/codestrands/: README.md  build.yaml
bases/keycloak/: README.md  build.yaml
releases/codestrands/: deployment.yaml  httproute.yaml  kustomization.yaml  namespace.yaml  sealedsecret.yaml  service.yaml
releases/keycloak/: httproute.yaml  kustomization.yaml  namespace.yaml
